--- a/SouDemais.html
+++ b/SouDemais.html
@@ -5,18 +5,23 @@
 </head>
 <body>
 
-<h1>Venha ser feliz com suas músicas!</h1>
+<h1 style="color: rgb(238, 38, 165); text-align: center;">Venha ser feliz com suas músicas!</h1>
+<hr>
+<h2 style="color:black: center"> Se divirta fazendo o que você mais gosta, com as pessoas que gosta!!!</h2>
 <img src="doida/fãs.jpg" width="900" height="600">
-<p>Se você está cansado de todos zuarem suas musicas,de todas as vezes que você fala o nome do seu cantor favorito e riem de você,veio ao lugar certo.
+<hr>
+<p style="color:rgb(13, 49, 209)">Se você está cansado de todos zuarem suas musicas,de todas as vezes que você fala o nome do seu cantor favorito e riem de você,veio ao lugar certo.
 
-  <p>Com o aplicativo FÃS.COM,você consegue achar as melhores pessoas para conversar sobre seus cantores favoritos.Com ele você pode bater bate papo com qualquer pessoa e em qualquer lugar.  </p> 
+  <p style="color:rgb(13, 49, 209)">Com o aplicativo FÃS.COM,você consegue achar as melhores pessoas para conversar sobre seus cantores favoritos.Com ele você pode bater bate papo com qualquer pessoa e em qualquer lugar.  </p> 
  
-  <p>Mas você deve estar se perguntando:"Mas como vou entender alguém de outro pais que não seja o meu?",não precisa se preocupar,nosso aplicativo traduz as mensagens e audios para seu idioma.Acabou a zuação. Aqui podem até encontrar grandes amigos que levará para a vida toda e falando dos melhores assuntos num é mesmo kkkkk.</p>
+  <p style="color:rgb(13, 49, 209)">Mas você deve estar se perguntando:"Mas como vou entender alguém de outro pais que não seja o meu?",não precisa se preocupar,nosso aplicativo traduz as mensagens e audios para seu idioma.Acabou a zuação. Aqui podem até encontrar grandes amigos que levará para a vida toda e falando dos melhores assuntos num é mesmo kkkkk.</p>
 
-   <p>Venha a FÃS.COM e se divirta com suas conversas e venha conhecer nossas funções,onde você só encontra aqui.</p>
+   <strong><em><p>Venha a FÃS.COM e se divirta com suas conversas e venha conhecer nossas funções,onde você só encontra aqui.</p></em></strong>
  <li><a href="https://delas.ig.com.br/igteen/2016-07-21/fa-adolescencia.html">Você é fã o bastante???</a></li> 
  <li><a href="https://www.atrevida.com.br/index.php?uriA=testes&uriB=teste&uriC=teste-voce-e-fanatica-pelo-seu-idolo&uriD=&uriE=&uriF=">Você é fanática pelo seu ídolo???</a></li> 
-<p>Para entrar no wapp é só clicar no botão abaixo bb!Vamos badalar??? </p>
+ <hr>
+<p style="color: rgb(36, 109, 14)">Para entrar no wapp é só clicar no botão abaixo bb! <br>Vamos badalar??? </p>
    <button>Venha conversar!!!</button>
 </body>
 </html>
+S
