--- a/SouDemais.html
+++ b/SouDemais.html
@@ -3,6 +3,7 @@
 <head>
 <title>FÃS.COM</title>
 </head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <body>
 
 <h1 style="color: rgb(238, 38, 165); text-align: center;">Venha ser feliz com suas músicas!</h1>
@@ -15,13 +16,44 @@
   <p style="color:rgb(13, 49, 209)">Com o aplicativo FÃS.COM,você consegue achar as melhores pessoas para conversar sobre seus cantores favoritos.Com ele você pode bater bate papo com qualquer pessoa e em qualquer lugar.  </p> 
  
   <p style="color:rgb(13, 49, 209)">Mas você deve estar se perguntando:"Mas como vou entender alguém de outro pais que não seja o meu?",não precisa se preocupar,nosso aplicativo traduz as mensagens e audios para seu idioma.Acabou a zuação. Aqui podem até encontrar grandes amigos que levará para a vida toda e falando dos melhores assuntos num é mesmo kkkkk.</p>
-
+  <hr>
+  <ul class="nav flex-column">
+    <li class="nav-item">
+      <em>  <a class="nav-link active" href="#">Seja feliz!!!</a></em>
+    </li>
+    <li class="nav-item">
+      <em> <a class="nav-link" href="#">Se ame!!!</a></em>
+    </li>
+    <li class="nav-item">
+    <em> <a class="nav-link" href="#">Ame!!!</a></em>
+    </li>
+    <li class="nav-item">
+    <em><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> Viva!!!</a></em>
+    </li>
+  </ul>
+  <hr>
    <strong><em><p>Venha a FÃS.COM e se divirta com suas conversas e venha conhecer nossas funções,onde você só encontra aqui.</p></em></strong>
  <li><a href="https://delas.ig.com.br/igteen/2016-07-21/fa-adolescencia.html">Você é fã o bastante???</a></li> 
  <li><a href="https://www.atrevida.com.br/index.php?uriA=testes&uriB=teste&uriC=teste-voce-e-fanatica-pelo-seu-idolo&uriD=&uriE=&uriF=">Você é fanática pelo seu ídolo???</a></li> 
  <hr>
-<p style="color: rgb(36, 109, 14)">Para entrar no wapp é só clicar no botão abaixo bb! <br>Vamos badalar??? </p>
-   <button>Venha conversar!!!</button>
+<p style="color: rgb(139, 15, 133)">Para entrar no wapp é só clicar no botão abaixo bb! <br>Vamos badalar??? </p>
+   <button><strong><em>Venha conversar!!!</em></strong></button>
+ <p>  <button><strong><em>Venha badalar!!!</em></strong></button></p>
+ <h2 style="color:rgb(139, 15, 133)"> Frases!</h2>
+ <p style="color:rgb(13, 49, 209)">"Pouco importam as notas na música, o que conta são as sensações produzidas por elas."</p>
+ <p style="color:rgb(13, 49, 209)">"Que a música nos leve,
+  para mares nunca antes navegados,
+  de sensações sentidas
+  e de memórias inesquecidas."</p>
+  <p style="color:rgb(13, 49, 209)">"As pessoas tem mania de rotular fãs como "iludidas". Amar alguém sem pedir nada em troca não é ser iludido, é saber amar incondicionalmente."</p>
+  <p style="color:rgb(13, 49, 209)">"Parabéns fã,você faz esse sonho real,você merece o respeito de todos."</p>
+  <p><span class="badge badge-primary">"Fã é tudo igual, só muda o ídolo!"</span></p>
+<p><span class="badge badge-secondary">"Aprendi com a dor e a distância que o amor de fã é muito mais do que palavras podem dizer."</span></p>
+<p><span class="badge badge-success">"A distância não significa nada, quando alguém significa tudo..."</span></p>
+<p><span class="badge badge-danger">"Meu ídolo me fez entender que por mais que tudo esteja difícil NADA NUNCA é impossível. Meu ídolo me ensinou a "sempre" acreditar."</span></p>
+<p><span class="badge badge-warning">"Amor de fã ninguém entende, mas a maioria julga!"</span>
+<p><span class="badge badge-info">"Nada é impossível para um coração que transborda fé. Sonhe, sonhe muito mais nunca deixe de acreditar que sonhos podem se tornar realidade."</span></p>
+<p><span class="badge badge-light">"Sonhar, acreditar, e realizar! Foi assim que meu ídolo me ensinou."</span></p>
+<p><span class="badge badge-dark">"Fã que é fã nunca desiste do seu ídolo."</span></p>
 </body>
 </html>
-S
